[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/shovelicon.png" type="Texture" id=1]
[ext_resource path="res://Interactable/Shop.gd" type="Script" id=2]
[ext_resource path="res://Sprites/feather.png" type="Texture" id=3]
[ext_resource path="res://Sprites/candleicon.png" type="Texture" id=4]

[node name="Shop" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 296.0
margin_bottom = 156.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 296.0
margin_bottom = 156.0
alignment = 1

[node name="Carrots" type="Label" parent="VBoxContainer"]
modulate = Color( 1, 0.584314, 0, 1 )
margin_top = 14.0
margin_right = 296.0
margin_bottom = 28.0
text = "carrots 0"
align = 2

[node name="Title" type="Label" parent="VBoxContainer"]
modulate = Color( 0.113725, 0.654902, 0.184314, 1 )
margin_top = 32.0
margin_right = 296.0
margin_bottom = 46.0
text = "CARROT SHOP"
align = 1

[node name="ShovelButton" type="Button" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 296.0
margin_bottom = 70.0
text = "Shovel: wider dig (5)"
icon = ExtResource( 1 )

[node name="FeatherButton" type="Button" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 296.0
margin_bottom = 94.0
text = "Feather: infinite jumps (10)"
icon = ExtResource( 3 )

[node name="CandleButton" type="Button" parent="VBoxContainer"]
margin_top = 98.0
margin_right = 296.0
margin_bottom = 118.0
text = "Candle: see in the dark (25)"
icon = ExtResource( 4 )

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_top = 122.0
margin_right = 296.0
margin_bottom = 142.0
text = "Back"
[connection signal="pressed" from="VBoxContainer/ShovelButton" to="." method="_on_ShovelButton_pressed"]
[connection signal="pressed" from="VBoxContainer/FeatherButton" to="." method="_on_FeatherButton_pressed"]
[connection signal="pressed" from="VBoxContainer/CandleButton" to="." method="_on_CandleButton_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
